Mudanca for action

--- a/templates/index.html
+++ b/templates/index.html
@@ -93,7 +93,7 @@
                             <div class="feature-car-rent-box-1">
                                 <br /><br /><br />
 
-                                <form class="trip-form bg-light" id="input" method="post" action="https://storage.googleapis.com/iris-site/index.html">
+                                <form class="trip-form bg-light" id="input" method="post" action=/predict>
                                     <h3>Insira os dados a seguir</h3>
                                     <div class="row">
                                         <div class="form-group col-md-6">
