--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <title>Iris Project</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+        <link href="https://fonts.googleapis.com/css?family=DM+Sans:300,400,700&display=swap" rel="stylesheet">
+    
+        <!-- MAIN CSS -->
+    </head>
 
     <body>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">Sobre</a></li>
+            <!--<li><a href="blog.html" class="nav-link">Blog</a></li>-->
+            <li><a href="contact.html" >Contato</a></li>
+        </ul>
 
         <form id="create" method="POST" action=/predict>
             <label for="fname">sepal_length_cm:</label><br>
