--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
 
     <body>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li class="active"><a href="about.html">Sobre</a></li>
+            <li><a href="index">Home</a></li>
+            <li class="active"><a href="about">Sobre</a></li>
             <!--<li><a href="blog.html" class="nav-link">Blog</a></li>-->
-            <li><a href="contact.html" >Contato</a></li>
+            <li><a href="contact" >Contato</a></li>
         </ul>
 
         <form id="create" method="POST" action=/predict>
